完善平台架构、安全合同与赛事展示 (#24)
## 变更

- 收紧 Blog API 的 HTTP 状态、JWT Bearer 解析、分页上限、评论分页和分类/标签唯一性约束。
- 完善比赛与奖项展示：奖项登录可见开关、指定赛事列表只显示计数、比赛可填写完整日期且年份筛选继续按派生年份执行。
- 调整 OJ 提交采集批次写入、accepted 汇总聚合与采集并发边界。
- 收敛仓库文档、模块 README 与 agent 约束，并在 rebase 冲突处理中保留最新主干的全站双主题说明。

## 影响

- 数据库迁移新增 V042 到 V051，部署时后端、前端和迁移需要同步发布。
- 游客不再能看到被管理员标记为仅登录可见的奖项。
- 旧的无上限分页、HTTP 200 失败包和裸 token 请求不再作为兼容路径保留。

## 验证

- `mvn clean test`
- `cd frontend && pnpm lint && pnpm test && pnpm typecheck && pnpm
build`
- `cd platform-blog/upstream/nblog/blog-view && npm install && npm test
&& npm run build`
- `git diff --check origin/main...HEAD`

## 冲突处理

- 已基于最新 `origin/main` rebase，解决 #23 全站双主题相关文档冲突，保留本分支文档收敛结构并补入双主题事实。

Co-authored-by: huangbingrui <huangbingrui.awa@bytedance.com>